# app/controllers/concerns/accountable_resource.rb
@@ -173,6 +173,7 @@ module AccountableResource
         :opening_balance_date,
         :institution_name, :institution_domain, :notes, :exclude_from_reports,
         :enable_category_matcher,
+        :liquidity_choice, :available_on, :notice_period_days, :auto_renew, :renewal_term_months,
         accountable_attributes: self.class.permitted_accountable_attributes
       )
     end
